--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.13.0",
+    "@vueuse/core": "^13.2.0",
+    "axios": "^1.9.0",
+    "naive-ui": "^2.41.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
